Revision history for Perl extension MarpaX::Demo::JSONParser.

1.01  Sat Aug 17 09:34:00 2013
	- Replace Peter's JSON grammar with one using spaces (from his original gist). I had used tabs.
	- Move the grammars from data/*.bnf to share/*.bnf. This, together with adopting File::ShareDir and
		Module::Install, means these files are installed in a shared directory when the source code is installed.

1.00  Mon Jul  1 14:14:00 2013
	- Initial version.