@@ -9,6 +9,8 @@ Comments= <<EOT
 - Replace Peter's JSON grammar with one using spaces (from his original gist). I had used tabs.
 - Move the grammars from data/*.bnf to share/*.bnf. This, together with adopting File::ShareDir and
 Module::Install, means these files are installed in a shared directory when the source code is installed.
+- Add scripts/demo.pl to actually run the code, and copy its source into the Synopsis.
+- Add scripts/find.grammars.pl to print the path to the installed grammars json.1.bnf and json.2.bnf.
 EOT
 
 [V 1.00]
